ligolang/src/test/contracts/negative/deep_pattern_matching/pm_fail10.ligo
type myd is One of int | Two

function t (const x : myd) is
  case x of
  | One (1) -> 2
  | Two -> 1
  end
